--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h2 class="subtitulo"> Formação</h2>
 
       <div>
-        <p class="formacao-texto"> 🎓 Minha experiência acadêmica está sendo a <strong> Graduação</strong> que estou fazendo em Ciência da Computação na Estácio. Além disso me mantenho sempre atualizado com cursos intensivos olnine.</p>
+        <p class="formacao-texto"> 🎓 Minha experiência acadêmica está sendo a <strong> Graduação</strong> que estou fazendo em Ciência da Computação na Estácio. Além disso me mantenho sempre atualizado com cursos intensivos online.</p>
         <ul class="faculdade-lista">
           <li class="faculdade">
             <span class="faculdade-tipo">Bacharel</span>
