--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <div class="footer-container">
       <p class="footer-texto"> Estou disponível para novos projetos no momento. Entre em contato comigo e marcaremos uma conversa! </p>
       <ul class="footer-contato">
-        <li> jp217644@gmail.com</li>
-        <li>+55 21 99418-1676</li>
+        <li> 📧 jp217644@gmail.com</li>
+        <li> 📱 +55 21 99418-1676</li>
         <li><a href="https://github.com/JoaoPCF7">GitHub</a></li>
         <li><a href="https://www.instagram.com/_joaocf_/">Instagram</a></li>
         <li><a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-carvalho-fernandes-842a3b229/">Linkedin</a></li>
